fix overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,7 +22,7 @@ body {
 header {
   display: flex;
   justify-content: center;
-  padding: 20px 20px;
+  padding: 10px 20px;
   background-color: var(--accent-color);
   color: #fff;
   grid-row: 1 / 2;
